# bfxpm

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
1.0.0/: 404.html  index.html
1.0.0/ai_agent/: index.html
1.0.0/output/: index.html
1.0.0/parameters/: index.html
1.0.0/references/: index.html
1.0.0/search/: search_index.json
1.0.0/styles/: extra.css
1.0.1/: index.html
1.0.1/developers/: index.html
1.0.1/js/: github-stats.js
1.0.1/overrides/partials/: sidebar-github.html
1.0.1/search/: search_index.json
1.0.1/usage/: index.html
conda/: meta.yaml
docs/: ai_agent.md  developers.md  index.md  output.md  parameters.md  references.md  usage.md
scripts/: prepare_release_bundle.py  publish.py
src/bfxpm/: __init__.py  ai_client.py  ai_config.py  main.py  safety.py  utils.py
src/bfxpm/agents/: bio_agent.py  tools.py
src/bfxpm/assets/git-essentials/: CITATION.cff  Makefile  README.md  _quarto.yml  _variables.yml  author_manifest.qmd  author_manifest_Rpackage.qmd  custom.css  docker-compose.yml  git_cache.md  git_commit.sh  git_push.md  github_bot.md  gpg.md  project-template-makefile.md  rsconnect.md  slurm_script.sbatch  versioning.md
src/bfxpm/assets/git-essentials/workflows/: github-pages-deployment.yml  shinyapps_deploy.yml
src/bfxpm/assets/mkdocs/: mkdocs.yml
src/bfxpm/commands/: ai_cmd.py  clean.py  deposit.py  env_cmd.py  fetch_cmd.py  flow.py  git_cmds.py  init_cmd.py  integrity.py  map_cmd.py  misc.py  modify.py  organize.py  pipeline_cmd.py  scan.py  tree.py
tests/: test_main.py
(+7 files in other folders)
